--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Belkirk College of Engineering
-short_title: Belkirk
-description: Jekyll demo for Forestry CMS
+title: Öppen Upphandling
+short_title: Öppen Upphandling
+description: Öppen Upphandling WebPage
 baseurl:
 permalink: "/:path/"
 defaults:
